# temp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-startup.sh  nginx.conf  pyproject.toml
apps/common/: admin.py  models.py  views.py
apps/institutions/: admin.py  models.py  resources.py  serializers.py  urls.py  views.py
apps/institutions/migrations/: 0001_initial.py  0002_alter_institution_created_at_and_more.py
config/: asgi.py  settings.py  urls.py  wsgi.py
static/: map-widget.js
templates/unfold/helpers/: add_link.html
